# finmem-india

./: .gitignore  LICENSE  README.md  finmem_results.txt  pyproject.toml  requirements.txt  run.py  setup_env.py  test_trade_logging.py  trading_system.db  trading_system.py
app/: main.py
app/utils/: data_processor.py  finmem_integration.py  market_hours.py  news_scraper.py  realtime_processor.py  test_data.py  trading.py
config/: config.toml  finmem_config.json
data/: config.json
logs/: trades.csv
puppy/: __init__.py
puppy/core/: simulation.py
puppy/models/: __init__.py  agent.py  llm.py  memory.py  rule_based_trader.py
puppy/scrapers/: moneycontrol_news.py
puppy/services/: news_service.py
puppy/utils/: __init__.py  config.py  credentials.py  data_loader.py  financial_data.py  portfolio.py  real_time_data.py  trade_logger.py
